--- a/src/view/contains/thuoctinhsanpham/ViewSP.form
+++ b/src/view/contains/thuoctinhsanpham/ViewSP.form
@@ -278,10 +278,9 @@
               <Font name="Segoe UI" size="14" style="0"/>
             </Property>
             <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-              <StringArray count="3">
-                <StringItem index="0" value="Qu&#x1ea7;n"/>
-                <StringItem index="1" value="&#xc1;o"/>
-                <StringItem index="2" value="Qu&#x1ea7;n &#xc1;o"/>
+              <StringArray count="2">
+                <StringItem index="0" value="&#xc1;o c&#x1ed9;c tay"/>
+                <StringItem index="1" value="&#xc1;o d&#xe0;i tay"/>
               </StringArray>
             </Property>
           </Properties>
