--- a/src/view/contains/ViewHeThong.form
+++ b/src/view/contains/ViewHeThong.form
@@ -595,7 +595,7 @@
                               </Group>
                               <Component id="btnHoanTac1" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
-                          <EmptySpace pref="11" max="32767" attributes="0"/>
+                          <EmptySpace max="32767" attributes="0"/>
                       </Group>
                   </Group>
                 </DimensionLayout>
